# communication-gateway-service

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  alembic.ini  compose.yaml  docker-bake.hcl  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
docs/adr/: 001_why_communication_gateway.md  002_provider_isolation.md  003_chat_service_boundary.md  004_adding_new_providers.md
docs/contracts/: api-contract.md
env/: pyproject.prod.toml
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_message_mappings.py  003_unique_provider_message_id.py
scripts/: health_check.py
src/communication_gateway/: banner.py  config.py  database.py  main.py
src/communication_gateway/api/: auth.py  health.py  middleware.py
src/communication_gateway/api/graphql/: context.py  schema.py
src/communication_gateway/api/graphql/queries/: provider_query.py
src/communication_gateway/api/graphql/types/: provider.py
src/communication_gateway/api/rest/: attachments.py  message_dto.py  messages.py  providers.py  webhooks.py
src/communication_gateway/application/ports/: address_resolver.py  channel_provider_registry.py  communication_provider.py  event_publisher.py  message_mapping_store.py  provider_resolver.py
src/communication_gateway/application/services/: gateway_dispatcher.py  webhook_service.py
src/communication_gateway/domain/: enums.py  errors.py  events.py
src/communication_gateway/domain/models/: attachment_reference.py  channel_capabilities.py  communication_channel.py  delivery_receipt.py  inbound_message.py  message_mapping.py  outbound_message.py  provider_config.py  provider_identity.py  provider_metadata.py  provider_response.py  resolution_context.py
src/communication_gateway/domain/services/: delivery_lifecycle.py
src/communication_gateway/infrastructure/events/: http_event_forwarder.py  in_memory_event_publisher.py  kafka_event_publisher.py
src/communication_gateway/infrastructure/persistence/: in_memory_message_mapping_store.py  in_memory_registry.py  models.py
src/communication_gateway/infrastructure/persistence/repositories/: sqlalchemy_message_mapping_repository.py
src/communication_gateway/infrastructure/providers/: base_config.py
src/communication_gateway/infrastructure/providers/email/: email_config.py  email_provider.py
src/communication_gateway/infrastructure/providers/evolution/: evolution_config.py  evolution_dto.py  evolution_mapper.py  evolution_provider.py
src/communication_gateway/infrastructure/providers/firebase/: firebase_provider.py
src/communication_gateway/infrastructure/providers/mailu/: mailu_provider.py
src/communication_gateway/infrastructure/providers/resend/: __init__.py  resend_provider.py
src/communication_gateway/infrastructure/providers/signal/: signal_provider.py
src/communication_gateway/infrastructure/providers/smtp/: smtp_provider.py
src/communication_gateway/infrastructure/providers/telegram/: telegram_provider.py
src/communication_gateway/infrastructure/providers/twilio/: twilio_provider.py
src/communication_gateway/infrastructure/resolvers/: default_provider_resolver.py  dict_address_resolver.py  priority_provider_resolver.py
src/communication_gateway/tests/: conftest.py  test_config.py  test_delivery_lifecycle.py  test_dispatcher.py  test_dto_mapping.py  test_email_provider.py  test_evolution_provider.py  test_health.py  test_kafka_event_publisher.py  test_registry.py  test_resend_provider.py  test_rest_endpoints.py  test_runtime.py  test_webhooks.py
src/omnixys_communication_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1 files in other folders)
